# tls-migration-v2

./: DESIGN.md  Dockerfile  migration.yaml  pyproject.toml
configs/: example_config.yaml
vmware2scw/: INTEGRATION.md  cli.py  config.py
vmware2scw/configs/: example_batch_plan.yaml
vmware2scw/converter/: adapt_guest.py  bios2uefi.py  bios2uefi_windows.py  bootloader.py  disk.py  windows_virtio.py  windows_virtio_v2.py
vmware2scw/pipeline/: batch_orchestrator.py.back  batch_plan.py  dashboard.py  inventory.py  migration.py  state.py  validator.py
vmware2scw/scaleway/: instance.py  mapping.py  s3.py
vmware2scw/tests/: test_batch.py
vmware2scw/utils/: logging.py  subprocess.py
vmware2scw/vmware/: client.py  export.py  inventory.py  snapshot.py
